# TimeSeriesProject

./: CMakeLists.txt  LICENSE  README.md
TimeSeriesTransformations/: CMakeLists.txt  TimeSeriesTransformations.cpp  TimeSeriesTransformations.h
TimeSeriesTransformations-Test/: CMakeLists.txt  test.cpp
TimeSeriesTransformationsApplication/: CMakeLists.txt  TimeSeriesTransformationsApplication.cpp
